--- a/client/components/CreateNewRoomModal/index.css
+++ b/client/components/CreateNewRoomModal/index.css
@@ -1,9 +1,13 @@
 .modal-main {
   position:fixed;
-  background: white;
   width: 80%;
   height: auto;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
+  font-size: 1.5rem;
+}
+
+.modal-main h1 {
+  font-size: 32px;
 }
