--- a/client/components/SongSearch/index.css
+++ b/client/components/SongSearch/index.css
@@ -42,6 +42,7 @@
   flex: 1 0 80%;
   background-color: transparent;
   font-size: 16px;
+  color: white;
 }
 
 .songSearch-queue-container {
@@ -51,6 +52,7 @@
   max-height: 100%;
   overflow: scroll;
   background-color: rgba(255, 255, 255, 0.03);
+  color: white;
 }
 
 .songSearch-queue-header {
